fix search hint

--- a/organisations_demo/templates/index.html
+++ b/organisations_demo/templates/index.html
@@ -12,7 +12,7 @@
                 <span class="form-hint">
                    At the moment you can search for companies on this site:
                    <br>
-                    For example, Kinda Foods
+                    For example, Kinda Food
                 </span>
                 {{ form.search_term(class_="form-control")|safe }}
                 {% if form.search_term.errors %}
